@@ -67,7 +67,9 @@ HttpACL.prototype.update = function(cb)
         var trigger = JSON.parse(res[k]);
         if(trigger.type == 'http')
         {
-          var acl = mkACL(trigger.appkey,trigger.method,trigger.job_id);
+          var _vo = trigger.vo || '';
+          var akey = (_vo=='$' || _vo=='')?trigger.appkey:_vo + '.' + trigger.appkey;
+          var acl = mkACL(akey,trigger.method,trigger.job_id);
           self.add(acl);
         }
       }
