@@ -52,8 +52,10 @@ TR.prototype.setByJob = function(job,cb)
 {
   var self = this;
   var id = 'def.' + job.job_id;
+  var vo = job._vo;
   var trigger = job.trigger;
   trigger.id = id;
+  trigger.vo = vo;
   trigger.job_id = job.job_id;
   self.setTrigger(id,trigger,cb);
 }
